--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Utasora</string>
+    <string name="menu_phrases">フレーズ</string>
+    <string name="menu_poems">詩</string>
+    <string name="menu_introspection">内観</string>
+    <string name="menu_settings">設定</string>
 </resources>
